Revert back to read more button on about us section, fix layout and contrast

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -702,72 +702,34 @@ header {
     background-position: right center;
 }
 
-.about__carousel {
-    text-align: center;
-    margin: 0 auto;
-    overflow: hidden;
-}
-
-.carousel__slides {
-    display: flex;
-}
-
-.slides-item {
+.about__text {
     position: absolute;
     top: 50%;
-    right: -50%;
+    right: -40%;
     transform: translate(-50%, -50%);
-    width: 100%;
-    height: 15.625em;
-    display: flex;
-    justify-content: center;
-    flex-shrink: 0;
-    margin: 0 1em;
-    padding: 1.25em;
-}
-
-.carousel__nav {
-    border: 1px solid red;
-    /* padding: 1.25em .5em; */
-}
-
-.slider-nav {
-    position: absolute;
-    top: 20%;
-    left: 0;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 1.5rem;
-    height: 1.5em;
+    width: 90%;
+    height: 450px;
+    background-color: rgb(244, 246, 241, .5);
     color: var(--clr-dark);
-    background-color: #9DA6A6;
-    border-radius: 50%;
-    padding: .5em;
-}
-
-/* .about__text {
-    position: absolute;
-    top: 50%;
-    right: -30%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-    height: 33em;
-    background-color: rgb(244, 246, 241, .3);
-    color: var(--clr-dark);
-    font-weight: 700;
-    border: 2px solid var(--clr-main);
-    border-radius: 5px;
-    padding: 1em;
+    font-weight: 900;
+    line-height: 1.4;
+    border-radius: 10px;
+    padding: 1.5em;
     overflow-y: auto;
+    scroll-behavior: smooth;
+}
+
+.text {
+    text-indent: 20px;
 }
 
 .more-text {
+    text-indent: 20px;
     display: none;
 }
 
 .link-container {
-    margin: 1em auto;
+    margin: .5em 0;
 }
 
 .read-more-link{
@@ -794,36 +756,39 @@ header {
 
 @media only screen and (min-width: 26em) {
     .about__text {
-        width: 65%;
-        right: -18%;
-        padding: 1.5em;
+        width: 80%;
+        height: 400px;
+        right: -30%;
+        padding: 2em;
     }
 }
 
-@media only screen and (min-width: 40.625em) {
+@media only screen and (min-width: 37.5em) {
     .about__text {
+        width: 65%;
+        height: 375px;
         right: -30%;
     }
 }
+
 @media only screen and (min-width: 48em) {
     .about__text {
         width: 50%;
+        height: 450px;
         right: -20%;
         padding: 2em;
     }
 }
 
-@media only screen and (min-width: 160em) {
-    .about-container {
-        background-color: rgb(45, 58, 63, .9);
-    }
+@media only screen and (min-width: 90em) {
     .about__text {
-        width: 37.5em;
-        height: 31.25em;
-        top: 50%;
+        width: 50%;
+        height: 530px;
         right: -20%;
+        padding: 3em;
     }
-}  */
+} 
+
 
 /* Cards Section Container */
 .cards-container {
